--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div id="app" class="h-full flex flex-col relative">
 
         <div class="absolute inset-0 z-0 pointer-events-none">
-            <img src="https://images.unsplash.com/photo-1599234346860-2e408544a86f?q=80&w=1000&auto=format&fit=crop" class="w-full h-full object-cover opacity-100" alt="Taipei Background">
+            <img src="https://raw.githubusercontent.com/8ytxybb7cg-web/Test-trip/refs/heads/main/IMG_6732.jpeg" class="w-full h-full object-cover opacity-100" alt="Taipei Background">
             <div class="absolute inset-0 bg-gradient-to-b from-slate-100/90 via-slate-100/60 to-slate-200/90"></div>
         </div>
 
