Remove '（卡片式）' from 記帳 heading

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
           </div>
 
           <div v-if="currentTab === '記帳'">
-            <h3 class="text-base font-bold mb-2">💳 記帳（卡片式）</h3>
+            <h3 class="text-base font-bold mb-2">💳 記帳</h3>
 
             <div class="space-y-2 mb-3">
                 <div class="flex">
