--- a/index.html
+++ b/index.html
@@ -112,21 +112,22 @@
 
       <div class="space-y-4 mb-4">
         <div class="glass-card">
-          <div class="flex justify-end mb-2">
-             <span class="text-[10px] font-bold text-sky-700 bg-sky-100 px-2 py-1 rounded-md border border-sky-200 inline-block">📍 台北市</span>
+          <div class="flex items-center mb-2">
+             <i class="ph ph-map-pin-simple-area text-sm text-gray-500 mr-1"></i>
+             <span class="text-xs font-bold text-gray-600">台北市</span>
           </div>
     
-          <div class="flex items-center justify-between">
-            <div class="flex items-baseline gap-3">
-              <div class="text-3xl font-bold text-gray-800">{{ weather.temp }}°</div>
-              <div class="text-xs text-gray-600">
-                <div class="font-medium">{{ weather.desc }}</div>
-                <div class="text-[12px] text-gray-500">降雨機率 {{ weather.rain }}%</div>
- 
-              </div>
+          <div class="flex h-24">
+            <div class="flex-1 flex items-center justify-start">
+                <div class="text-[64px] font-bold text-gray-800 leading-none">{{ weather.temp }}°</div>
             </div>
-            <div class="text-2xl text-sky-500">
-              <i :class="weatherIconClass"></i>
+
+            <div class="flex-shrink-0 w-32 flex flex-col justify-center items-end text-right">
+                <div class="flex items-center gap-1 text-base text-gray-600 font-bold mb-1">
+                    {{ weather.desc }}
+                    <i :class="weatherIconClass" class="text-xl text-sky-500"></i>
+                </div>
+                <div class="text-xs text-gray-500">降雨機率 {{ weather.rain }}%</div>
             </div>
           </div>
         </div>
