--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
 
     createApp({
       setup() {
-        const appVersion = ref('v2.07');
+        const appVersion = ref('v251212-2.07');
         const currentTab = ref('行程');
         const selectedDay = ref(0); 
 
