--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@
         }
 
         // --- CLOUD SYNC ---
-        const TRIP_ID = 'shared_trip'; // Ensure this matches 2.06.txt
+        const TRIP_ID = 'taipei_trip2025'; // Ensure this matches 2.06.txt
         let isRemoteUpdate = false;
         let debounceTimer = null;
 
