--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover,maximum-scale=1.0,user-scalable=no" />
-  <title>eMenu Taipei v2.09 — 雲端版</title>
+  <title>eMenu Taipei v2.10 — 雲端版</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -46,11 +46,14 @@
         box-shadow: 0 8px 24px rgba(2,6,23,0.06);
     }
     .expense-card {
-        background: linear-gradient(135deg, #3b82f6 0%, #2563eb 100%);
+        /* New Custom Background: #081C54 (70%) */
+        background: linear-gradient(135deg, rgba(8, 28, 84, 0.7) 0%, rgba(8, 28, 84, 0.75) 100%);
+        backdrop-filter: blur(8px);
         color: white;
         border-radius: 24px;
         padding: 1.25rem;
-        box-shadow: 0 10px 30px -10px rgba(37, 99, 235, 0.5);
+        box-shadow: 0 10px 30px -10px rgba(8, 28, 84, 0.4);
+        border: 1px solid rgba(255,255,255,0.1);
     }
     
     @media screen and (max-width: 768px) {
@@ -332,21 +335,21 @@
                 </button>
 
                 <div class="text-center mb-6">
-                    <div class="text-blue-100 text-xs font-medium tracking-wide mb-1">總支出 (HKD)</div>
+                    <div class="text-blue-100/80 text-xs font-medium tracking-wide mb-1">總支出 (HKD)</div>
                     <div class="text-4xl font-bold mb-1">${{ totalExpense.hkd }}</div>
-                    <div class="text-blue-200 text-sm">TWD {{ totalExpense.twd }}</div>
+                    <div class="text-blue-200/80 text-sm">TWD {{ totalExpense.twd }}</div>
                 </div>
                 
                 <div class="grid grid-cols-2 gap-4 border-t border-white/20 pt-4">
                     <div class="text-center border-r border-white/20">
-                        <div class="text-blue-100 text-[10px] mb-0.5"><i class="ph ph-credit-card mr-1"></i>信用卡</div>
+                        <div class="text-blue-100/80 text-[10px] mb-0.5"><i class="ph ph-credit-card mr-1"></i>信用卡</div>
                         <div class="text-lg font-bold">${{ totalExpense.creditHkd }}</div>
-                        <div class="text-blue-200 text-[10px]">TWD {{ totalExpense.creditTwd }}</div>
+                        <div class="text-blue-200/80 text-[10px]">TWD {{ totalExpense.creditTwd }}</div>
                     </div>
                     <div class="text-center">
-                        <div class="text-blue-100 text-[10px] mb-0.5"><i class="ph ph-coins mr-1"></i>現金</div>
+                        <div class="text-blue-100/80 text-[10px] mb-0.5"><i class="ph ph-coins mr-1"></i>現金</div>
                         <div class="text-lg font-bold">${{ totalExpense.cashHkd }}</div>
-                        <div class="text-blue-200 text-[10px]">TWD {{ totalExpense.cashTwd }}</div>
+                        <div class="text-blue-200/80 text-[10px]">TWD {{ totalExpense.cashTwd }}</div>
                     </div>
                 </div>
             </div>
@@ -682,7 +685,7 @@
 
     createApp({
       setup() {
-        const appVersion = ref('v251213-2.09');
+        const appVersion = ref('v251213-2.10'); // **UPDATED VERSION**
         const currentTab = ref('行程');
         const selectedDay = ref(0); 
 
@@ -698,11 +701,11 @@
           }
         });
 
-        // Date/Day Info
+        // Date/Day Info - UPDATED labels to remove city/suburb description
         const days = reactive([
           { date: '15', week: '一', label: '抵達 (Day 1)', type: 'flight-out' },
-          { date: '16', week: '二', label: '市區 (Day 2)', type: 'normal' },
-          { date: '17', week: '三', label: '郊區 (Day 3)', type: 'normal' },
+          { date: '16', week: '二', label: 'Day 2', type: 'normal' },
+          { date: '17', week: '三', label: 'Day 3', type: 'normal' },
           { date: '18', week: '四', label: '回程 (Day 4)', type: 'flight-return' },
         ]);
         const isFlightDay = computed(() => ['flight-out', 'flight-return'].includes(days[selectedDay.value]?.type));
