--- a/index.html
+++ b/index.html
@@ -45,25 +45,29 @@
         padding: 0.75rem; 
         box-shadow: 0 8px 24px rgba(2,6,23,0.06);
     }
-    . .expense-card {
-  background: linear-gradient(
-    135deg,
-    rgba(8, 28, 84, 0.48) 0%,
-    rgba(8, 28, 84, 0.55) 100%
-  );
+    .expense-card {
+  /* 深藍色基底（主色一定要實） */
+  background:
+    linear-gradient(
+      135deg,
+      rgba(8, 28, 84, 0.82) 0%,
+      rgba(8, 28, 84, 0.9) 100%
+    );
 
-  backdrop-filter: blur(14px) saturate(120%);
-  -webkit-backdrop-filter: blur(14px) saturate(120%);
+  /* 玻璃效果只加「質感」，唔食色 */
+  backdrop-filter: blur(12px) saturate(115%);
+  -webkit-backdrop-filter: blur(12px) saturate(115%);
 
-  color: white;
+  color: #ffffff;
   border-radius: 24px;
   padding: 1.25rem;
 
+  /* 陰影 + 玻璃反光 */
   box-shadow:
-    0 12px 30px rgba(0, 0, 0, 0.25),
+    0 14px 36px rgba(8, 28, 84, 0.55),
     inset 0 1px 0 rgba(255, 255, 255, 0.12);
 
-  border: 1px solid rgba(255, 255, 255, 0.18);
+  border: 1px solid rgba(255, 255, 255, 0.16);
 }
     
     @media screen and (max-width: 768px) {
