--- a/index.html
+++ b/index.html
@@ -61,10 +61,9 @@
 
   box-shadow:
     0 14px 36px rgba(97, 123, 170, 0.45),
-    inset 0 1px 0 rgba(255, 255, 255, 0.08),
-    inset 0 -1px 0 rgba(0, 0, 0, 0.12);
+    inset 0 1px 0 rgba(255, 255, 255, 0.06);
 
-  border: 1px solid rgba(0, 0, 0, 0.08);
+  border: none;
 }
 
     @media screen and (max-width: 768px) {
