--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="robots" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover,maximum-scale=1.0,user-scalable=no" />
-  <title>eMenu Taipei v3.05</title>
+  <title>eMenu Taipei v3.06</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -71,7 +71,7 @@
         background: rgba(255, 255, 255, 0.65);
     }
 
-    /* The Dock - Enlarged & Taller */
+    /* The Dock */
     .iphone-dock {
         background: var(--dock-bg);
         backdrop-filter: blur(30px) saturate(180%);
@@ -133,6 +133,14 @@
     .sync-status { transition: all 0.3s ease; }
     .rotate-icon { animation: spin 1s linear infinite; }
     @keyframes spin { 100% { transform: rotate(360deg); } }
+
+    /* Update 4: Unified Modal Button Styles */
+    .btn-modal-cancel {
+        @apply flex-1 h-12 rounded-2xl bg-gray-100 text-gray-600 font-bold hover:bg-gray-200 transition active:scale-95 text-sm;
+    }
+    .btn-modal-save {
+        @apply flex-1 h-12 rounded-2xl bg-sky-500 text-white font-bold shadow-lg shadow-sky-200 hover:bg-sky-600 transition active:scale-95 text-sm disabled:opacity-50 disabled:active:scale-100;
+    }
   </style>
 </head>
 
@@ -243,7 +251,8 @@
 
               <div class="flex justify-between items-center mb-4 relative z-10">
                 <div class="text-[10px] font-bold bg-white/20 backdrop-blur-md px-2.5 py-1 rounded-full border border-white/10 tracking-widest">航班資訊</div>
-                <div class="text-right mr-8"> <div class="font-mono font-bold text-xl leading-none">{{ activeFlight.depTime }}</div>
+                <div class="text-right mr-8">
+                    <div class="font-mono font-bold text-xl leading-none">{{ activeFlight.depTime }}</div>
                     <div class="text-[10px] opacity-70 mt-1 font-medium">抵達 {{ activeFlight.arrTime }}</div>
                 </div>
               </div>
@@ -304,15 +313,17 @@
         </transition>
       </div>
 
-      <div v-if="currentTab !== '準備' && currentTab !== '記帳'" class="mb-4 sticky top-2 z-20 pointer-events-none w-full flex justify-between items-center">
+      <div v-if="currentTab !== '準備' && currentTab !== '記帳'" class="mb-4 sticky top-2 z-20 pointer-events-none w-full flex justify-between items-center px-1">
         <div class="pointer-events-auto">
-             <button v-if="isFlightDay && currentTab === '行程'" @click="openFlightModal('new')" class="bg-blue-600/90 backdrop-blur-xl text-white pl-4 pr-5 py-2.5 rounded-full shadow-lg shadow-blue-400/30 active:scale-95 transition-all flex items-center gap-2 border border-white/20">
+             <button v-if="isFlightDay && currentTab === '行程'" @click="openFlightModal('new')" 
+                class="h-11 pl-4 pr-5 rounded-full bg-white/90 backdrop-blur-xl border border-white/50 text-sky-600 shadow-[0_8px_20px_rgba(0,0,0,0.1)] active:scale-95 transition-all flex items-center gap-2">
                 <i class="ph ph-airplane-tilt text-xl"></i>
                 <span class="text-sm font-bold tracking-wide">新增航班</span>
              </button>
         </div>
 
-        <button @click="openAddModal" class="pointer-events-auto bg-gray-900/90 backdrop-blur-xl text-white pl-4 pr-5 py-2.5 rounded-full shadow-lg shadow-gray-400/30 active:scale-95 transition-all flex items-center gap-2 border border-white/20">
+        <button @click="openAddModal" 
+            class="pointer-events-auto h-11 pl-4 pr-5 rounded-full bg-gray-900/85 backdrop-blur-xl border border-white/20 text-white shadow-[0_8px_20px_rgba(0,0,0,0.2)] active:scale-95 transition-all flex items-center gap-2">
            <i class="ph ph-plus-circle-fill text-xl text-sky-400"></i>
            <span class="text-sm font-bold tracking-wide">新增項目</span>
         </button>
@@ -580,8 +591,8 @@
             </div>
           </div>
           <div class="mt-8 flex gap-3">
-            <button @click="closePreNoteModal" class="flex-1 py-3 text-gray-600 font-bold rounded-xl bg-gray-100 hover:bg-gray-200 transition">取消</button>
-            <button @click="savePreNoteEdit" class="flex-1 py-3 bg-black text-white font-bold rounded-xl shadow-lg hover:bg-gray-800 transition">儲存</button>
+            <button @click="closePreNoteModal" class="btn-modal-cancel">取消</button>
+            <button @click="savePreNoteEdit" class="btn-modal-save">儲存</button>
           </div>
         </div>
       </div>
@@ -609,8 +620,8 @@
                      <textarea v-model="newFlight.note" class="w-full p-3 rounded-xl border border-gray-200 bg-white/50 text-base" rows="2" placeholder="備註 (航廈、座位等)"></textarea>
                 </div>
                 <div class="mt-6 flex gap-3">
-                     <button @click="closeFlightModal" class="flex-1 py-3 text-gray-600 font-bold rounded-xl bg-gray-100 hover:bg-gray-200 transition">取消</button>
-                    <button @click="saveFlight" class="flex-1 py-3 bg-sky-500 text-white font-bold rounded-xl shadow-lg hover:bg-sky-600 transition">儲存</button>
+                     <button @click="closeFlightModal" class="btn-modal-cancel">取消</button>
+                    <button @click="saveFlight" class="btn-modal-save">儲存</button>
                 </div>
             </div>
         </div>
@@ -639,8 +650,8 @@
                     <textarea v-model="newItineraryItem.note" class="w-full p-3 rounded-xl border border-gray-200 bg-white/50 text-base" rows="3" placeholder="備註..."></textarea>
                 </div>
                  <div class="mt-6 flex gap-3">
-                    <button @click="closeItineraryModal" class="flex-1 py-3 text-gray-600 font-bold rounded-xl bg-gray-100 hover:bg-gray-200 transition">取消</button>
-                    <button @click="saveItineraryItem" class="flex-1 py-3 bg-sky-500 text-white font-bold rounded-xl shadow-lg hover:bg-sky-600 transition">儲存</button>
+                    <button @click="closeItineraryModal" class="btn-modal-cancel">取消</button>
+                    <button @click="saveItineraryItem" class="btn-modal-save">儲存</button>
                 </div>
              </div>
         </div>
@@ -680,8 +691,8 @@
                     </div>
                 </div>
                 <div class="mt-6 flex gap-3">
-                    <button @click="closeShoppingModal" class="flex-1 py-3 text-gray-600 font-bold rounded-xl bg-gray-100 hover:bg-gray-200 transition">取消</button>
-                    <button @click="saveShoppingItem" class="flex-1 py-3 bg-black text-white font-bold rounded-xl shadow-lg hover:bg-gray-800 transition disabled:opacity-50" :disabled="isUploading">
+                    <button @click="closeShoppingModal" class="btn-modal-cancel">取消</button>
+                    <button @click="saveShoppingItem" class="btn-modal-save" :disabled="isUploading">
                         {{ isUploading ? '上傳中...' : '儲存' }}
                     </button>
                 </div>
@@ -735,8 +746,8 @@
                     </div>
                 </div>
                 <div class="mt-8 flex gap-3">
-                   <button @click="closeExpenseModal" class="flex-1 py-3 text-gray-600 font-bold rounded-xl bg-gray-100 hover:bg-gray-200 transition">取消</button>
-                    <button @click="saveExpense" class="flex-1 py-3 bg-blue-600 text-white font-bold rounded-xl shadow-lg shadow-blue-200 hover:bg-blue-700 transition">
+                   <button @click="closeExpenseModal" class="btn-modal-cancel">取消</button>
+                    <button @click="saveExpense" class="btn-modal-save">
                         {{ newExpense.id ? '儲存' : '加入' }}
                     </button>
                 </div>
@@ -773,8 +784,8 @@
                     </div>
                 </div>
                 <div class="mt-6 flex gap-3">
-                   <button @click="closeInfoModal" class="flex-1 py-3 text-gray-600 font-bold rounded-xl bg-gray-100 hover:bg-gray-200 transition">取消</button>
-                    <button @click="saveInfoItem" class="flex-1 py-3 bg-sky-500 text-white font-bold rounded-xl shadow-lg hover:bg-sky-600 transition" :disabled="isUploading">
+                   <button @click="closeInfoModal" class="btn-modal-cancel">取消</button>
+                    <button @click="saveInfoItem" class="btn-modal-save" :disabled="isUploading">
                          {{ isUploading ? '...' : '儲存' }}
                     </button>
                 </div>
@@ -807,7 +818,7 @@
     const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
     createApp({
       setup() {
-        const appVersion = ref('v251214-3.05'); // Point 1: Update Version
+        const appVersion = ref('v251214-3.06'); // Point 1: Update Version
         const currentTab = ref('行程');
         const selectedDay = ref(0); 
 
@@ -839,7 +850,6 @@
           selectedMapLocation.value = (item.address && item.address.trim() !== '') ? { title: item.title, address: item.address, id: item.id } : null;
         }
         
-        // Point 3: Fix Map Links
         function generateMapLink(address, type) {
           if (!address) return '#';
           const q = encodeURIComponent(address);
@@ -952,8 +962,16 @@
 
         // --- Actions ---
         function openItineraryModal(item = null) {
-            Object.assign(newItineraryItem, item ? deepClone(item) : { id: null, title: '', note: '', time: '', address: '', dayIndex: selectedDay.value });
-            if(item) newItineraryItem.originalDayIndex = selectedDay.value;
+            // Update 2: Fix date logic
+            // Explicitly set dayIndex. Use item's dayIndex if exists (for editing), otherwise use selectedDay.
+            const targetDayIndex = (item && item.dayIndex !== undefined) ? item.dayIndex : selectedDay.value;
+            
+            Object.assign(newItineraryItem, {
+                dayIndex: targetDayIndex, // Ensure this is set first
+                ...deepClone(item || { id: null, title: '', note: '', time: '', address: '' })
+            });
+
+            if(item) newItineraryItem.originalDayIndex = targetDayIndex;
             itineraryModalOpen.value = true;
         }
         function closeItineraryModal() { itineraryModalOpen.value = false; }
@@ -984,7 +1002,15 @@
         }
         function addQuickItinerary(){
             if(!quickItinerary.title) return;
-            itinerary[selectedDay.value].push({ id: generateId(), title: quickItinerary.title, time: quickItinerary.time || '', note: '', address: '' });
+            // When quick adding, we must explicitly save the dayIndex
+            itinerary[selectedDay.value].push({ 
+                id: generateId(), 
+                title: quickItinerary.title, 
+                time: quickItinerary.time || '', 
+                note: '', 
+                address: '',
+                dayIndex: selectedDay.value // Ensure dayIndex is saved for future edits
+            });
             quickItinerary.title = ''; quickItinerary.time = '';
             saveAll();
         }
@@ -1079,7 +1105,6 @@
             closeFlightModal(); saveAll();
         }
 
-        // Point 9: Always open Itinerary Item modal for '+' button on Itinerary tab
         function openAddModal() {
             const t = currentTab.value;
             // Removed previous "isFlightDay" check here, logic split to the left button
@@ -1195,8 +1220,8 @@
             // Initial dummy data if empty (Local dev only)
             if(itinerary[0].length === 0) {
                  itinerary[0] = [
-                    { id:1, title: '航班抵達', time:'14:45', note:'第二航廈', address:'' },
-                    { id:2, title: '登記入住', time:'16:30', note:'西門町', address:'Westgate Hotel' }
+                    { id:1, title: '航班抵達', time:'14:45', note:'第二航廈', address:'', dayIndex: 0 },
+                    { id:2, title: '登記入住', time:'16:30', note:'西門町', address:'Westgate Hotel', dayIndex: 0 }
                  ];
             }
         });
