--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         </div>
       
         <div class="text-right">
-           <div class="text-[10px] font-bold text-gray-400 uppercase tracking-wide mb-0.5">即時匯率 (HKD/TWD)</div>
+           <div class="text-[10px] font-bold text-gray-400 uppercase tracking-wide mb-0.5">匯率 (HKD/TWD)</div>
            <div class="text-xl font-bold text-gray-800 tracking-tight font-mono">{{ formattedRate }}</div>
         </div>
       </div>
@@ -296,7 +296,7 @@
               <div>
                   <div class="flex items-center gap-1.5 text-gray-500 mb-0.5">
                     <i class="ph ph-map-pin-simple-area text-xs"></i>
-                    <span class="text-[11px] font-bold uppercase tracking-wider">台北市</span>
+                    <span class="text-[11px] font-bold uppercase tracking-wider">Taipei City</span>
                   </div>
                   <div class="text-[52px] leading-none font-light tracking-tighter text-black flex items-start">
                     {{ weather.temp }}<span class="text-3xl mt-1 font-normal">°</span>
