--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                      <span class="text-lg font-bold text-gray-800 tracking-tight">{{ weather.desc }}</span>
                      
                      <div class="flex items-center gap-1 text-[11px] font-bold text-[#007AFF] bg-blue-50/80 px-2 py-0.5 rounded-full border border-blue-100/50">
-                        <i class="ph ph-drop-fill text-xs"></i> {{ weather.rain }}%
+                        <i class="ph ph-drop-fill text-xs"></i> 降雨機率{{ weather.rain }}%
                      </div>
 
                      <div v-if="weather.warning" class="flex items-center gap-1 text-xs font-bold text-red-500 bg-red-50 px-2 py-0.5 rounded-full border border-red-100 animate-pulse">
